--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -3,7 +3,6 @@
 /*-------------------------------*/
 .sidebar-nav {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -24,7 +23,6 @@
 .sidebar-user {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #ffffff;
@@ -36,8 +34,6 @@
 
 .user-img-container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 30px;
@@ -59,8 +55,6 @@
 
 .sidebar-item a {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #b2b2b2;
@@ -72,8 +66,6 @@
 
 .img-container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 30px;
@@ -200,4 +192,10 @@
   background-color: rgba(63, 63, 63, 0.75);
   z-index: 100;
   display: none;
+}
+
+@media only screen and (min-width: 800px) {
+  .logo_navi_container .hamburger {
+    display: none;
+  }
 }
