--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -3,7 +3,6 @@
  *******************/
 .header {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -20,8 +19,6 @@
 
 .logo_navi_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 1200px;
@@ -41,19 +38,14 @@
 
 .mobile_search_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 20px;
   height: 20px;
-  background: rgba(255, 0, 0, 0.25);
 }
 
 #navigation_menu {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-end;
   align-items: center;
   width: 100%;
@@ -63,8 +55,6 @@
 
 #navigation_menu li {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   color: #3f3f3f;
@@ -234,8 +224,6 @@
 ********************/
 .searchbar_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 1200px;
@@ -246,8 +234,6 @@
 
 #searchbar {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   background: #e6e6e6;
@@ -262,8 +248,6 @@
 #category_menu {
   overflow: hidden;
   display: none;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   max-width: 100%;
@@ -274,8 +258,6 @@
 #category_menu_trigger {
   overflow: hidden;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 80px;
@@ -319,8 +301,6 @@
   right: 0;
   margin: 0 auto;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   width: 1200px;
@@ -332,7 +312,6 @@
 #search_content {
   overflow: hidden;
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -375,7 +354,6 @@
 
 .menu {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -421,8 +399,6 @@
 #sake_form {
   overflow: hidden;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -432,8 +408,6 @@
 .search_button_container {
   overflow: hidden;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 40px;
@@ -442,8 +416,6 @@
 
 #sake_submit_search {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   background: none;
@@ -466,8 +438,6 @@
 
 #sake_form .input_item {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   height: 32px;
@@ -507,7 +477,6 @@
   right: 0;
   margin: 0 auto;
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -530,8 +499,6 @@
 
 #sake_content li {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   list-style-type: none;
@@ -574,7 +541,6 @@
   right: 0;
   bottom: 0;
   display: none;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -682,14 +648,13 @@
 ********************/
 .sakenomu_footer {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: #e6e6e6;
+  background: #c6c6c6;
   width: 100%;
   height: auto;
-  border-top: 1px solid #d2d2d2;
+  border-top: 1px solid #b2b2b2;
   margin-top: 40px;
 }
 
@@ -706,7 +671,7 @@
 }
 
 .footer_border_line {
-  background: #d2d2d2;
+  background: #b2b2b2;
   width: 100%;
   height: 1px;
   margin: 20px 0;
@@ -714,7 +679,6 @@
 
 .footer_container #logo {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -736,7 +700,6 @@
 .sakenomu_footer_menu {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   width: 360px;
@@ -747,7 +710,6 @@
 .sakenomu_footer_menu ul {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
@@ -763,8 +725,6 @@
 
 .sakenomu_footer_menu ul li a {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   background: #666666;
@@ -778,7 +738,6 @@
 
 .footer_question {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -789,8 +748,6 @@
 
 .footer_question > textarea {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   color: #666666;
@@ -800,7 +757,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  border: 1px solid #d2d2d2;
+  border: 1px solid #b2b2b2;
 }
 
 .footer_question > input {
@@ -837,16 +794,8 @@
 }
 
 @media only screen and (min-width: 800px) {
-  .hamburger {
-    display: none;
-  }
-
   .mobile_search_container {
     display: none;
-  }
-
-  .logo_navi_container {
-    justify-content: space-between;
   }
 
   #navigation_menu {
@@ -855,17 +804,13 @@
 }
 
 @media only screen and (min-width: 1040px) {
-  .hamburger {
-    visibility: hidden;
-  }
-
   .footer_container {
     flex-direction: row;
   }
 
   .footer_border_line {
     display: block;
-    background: #d2d2d2;
+    background: #b2b2b2;
     width: 1px;
     height: 160px;
     margin: 0;
