--- a/css/user_view_config_profile.css
+++ b/css/user_view_config_profile.css
@@ -1,6 +1,5 @@
 #all_container {
 	display: flex;
-	flex-wrap: nowrap;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
@@ -245,8 +244,7 @@
   top: 0;
   left: 0;
   display: flex;
-	flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.3);
   width: 104px;
@@ -261,20 +259,27 @@
   align-items: center;
   background: none;
   color: #ffffff;
-  font-size: 13px;
-  width: 48px;
-  height: 24px;
-  border-radius: 12px;
-  border: 2px solid #ffffff;
   outline: none;
   cursor: pointer;
 }
 
+.profile_photo_button_container .change_pic {
+  font-size: 32px;
+  font-weight: bold;
+  width: 104px;
+  height: 104px;
+}
+
 .profile_photo_button_container .remove_profile_pic {
-  background: rgba(0, 0, 0, 0.8);
-  width: 48px;
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  background: rgba(0, 0, 0, 0.3);
+  font-size: 11px;
+  width: 40px;
   height: 24px;
   border: none;
+  border-radius: 12px;
 }
 
 /************************************************************/
