--- a/css/manage_view.css
+++ b/css/manage_view.css
@@ -101,10 +101,6 @@ body {
   padding-left: 8px;
 }
 
-.user_input {
-  border: 1px solid #d2d2d2;
-}
-
 .managemenu {
   color: #ffffff;
   width: 100%;
@@ -607,11 +603,7 @@ body {
   flex-grow: 1;
 }
 
-.user_input {
-  border: 1px solid #d2d2d2;
-}
-
-.sake_input {
+#sake_input {
   background: none;
   color: #3f3f3f;
   font-size: 13px;
@@ -620,10 +612,9 @@ body {
   border: none;
   border-radius: 4px;
   outline: none;
-  border: 1px solid #d2d2d2;
 }
 
-.sakagura_input {
+#sakagura_input {
   background: none;
   color: #3f3f3f;
   font-size: 13px;
