--- a/css/sake_search.css
+++ b/css/sake_search.css
@@ -1,6 +1,5 @@
 #mainview_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -11,7 +10,6 @@
 
 #mainview {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -22,8 +20,7 @@
 }
 
 #banner_frame {
-  display: flex;
-  flex-wrap: nowrap;
+  display: none;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -41,7 +38,6 @@
 
 #threads .review {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -62,8 +58,6 @@
 /*user_container*******************/
 .nonda_user_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
@@ -72,10 +66,12 @@
 
 .nonda_user_image_container {
   overflow: hidden;
-  width: 32px;
   min-width: 32px;
+  max-width: 32px;
   height: 32px;
   margin-right: 8px;
+  border-radius: 16px;
+  border: 1px solid #d2d2d2;
 }
 
 .nonda_user_image_container img {
@@ -86,7 +82,6 @@
 
 .nonda_user_name_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -100,14 +95,14 @@
   font-size: 13px;
   font-weight: bold;
   line-height: 140%;
+  word-break: break-all;
 }
 
 .nonda_user_profile_date_container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
   color: #8c8c8c;
   font-size: 12px;
   line-height: 140%;
@@ -137,7 +132,6 @@
 .nonda_brewery_pref_container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
   font-size: 13px;
@@ -189,7 +183,6 @@
 /*nonda_subject_message*******************/
 .nonda_subject_message_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -224,28 +217,19 @@
 
 /*nonda_photo*******************/
 .review_container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
+  display: grid;
+  grid-auto-rows: 64px;
+  grid-template-columns: repeat(auto-fill, minmax(64px, 1fr));
+  grid-gap: 2px;
   width: 100%;
-  height: auto;
+  padding-top: 8px;
   margin-top: 8px;
   border-top: 1px dotted #d2d2d2;
 }
 
 .review_image {
   overflow: hidden;
-  width: 60px;
-  height: 60px;
   border: 1px solid #d2d2d2;
-  margin-top: 8px;
-  margin-right: 8px;
-}
-
-.review_image:last-child {
-  margin-right: 0;
 }
 
 .review_image img {
@@ -258,7 +242,6 @@
 .tastes {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -269,7 +252,6 @@
 
 .tastes_item {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -288,14 +270,9 @@
 
 .tastes_title {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
-}
-
-.tastes_item:first-child .tastes_title {
   font-size: 8px;
 }
 
@@ -321,8 +298,6 @@
 
 .tastes_value_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -345,8 +320,6 @@
 
 .tastes_bar_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 40px;
@@ -396,13 +369,11 @@
 
 .new_review > div:first-child {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #000000;
   font-size: 18px;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
 }
 
 .top_review3630 {
@@ -412,11 +383,31 @@
   margin-right: 10px;
 }
 
+.loader {
+  border: 2px solid #3498db;
+  border-radius: 50%;
+  border-top: 2px solid #ffffff;
+  width: 40px;
+  height: 40px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {-webkit-transform: rotate(0deg);}
+  100% {-webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg);}
+}
+
 /****************************/
 #ad1, #ad2 {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
@@ -560,22 +551,14 @@
 }
 
 @media only screen and (min-width: 340px) {
-  .tastes_item:first-child .tastes_title {
+  .tastes_title {
     font-size: 11px;
   }
 }
 
 @media only screen and (min-width: 370px) {
-  .tastes_item:first-child .tastes_title {
+  .tastes_title {
     font-size: 13px;
-  }
-}
-
-@media only screen and (min-width: 410px) {
-  .nonda_user_profile_date_container {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
   }
 }
 
@@ -652,6 +635,7 @@
   }
 
   #banner_frame {
+    display: flex;
     width: 300px;
   }
 
