--- a/css/sake_view.css
+++ b/css/sake_view.css
@@ -28,11 +28,11 @@
   width: 1200px;
   max-width: 100%;
   height: auto;
-  margin-top: 15px;
+  margin-top: 16px;
 }
 
 #banner_frame {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -40,7 +40,7 @@
   width: 1200px;
   max-width: 100%;
   height: auto;
-  margin-top: 15px;
+  margin-top: 16px;
 }
 
 /*sakeheader*******************/
@@ -78,7 +78,7 @@
 #sake_rank {
   display: flex;
   align-items: baseline;
-  margin-right: 20px;
+  margin-right: 16px;
 }
 
 .star_rating {
@@ -116,7 +116,7 @@
   color: #3f3f3f;
   font-size: 13px;
   height: auto;
-  margin-right: 20px;
+  margin-right: 16px;
 }
 
 .nomitai_count_container {
@@ -135,7 +135,7 @@
 
 #nomitai_count {
   font-weight: bold;
-  margin-left: 4px;
+  margin-left: 5px;
 }
 
 .sakagura_info {
@@ -172,7 +172,7 @@
 
 .sakagura_info #address {
   font-weight: bold;
-  margin-left: 4px;
+  margin-left: 5px;
 }
 
 #personal {
@@ -432,7 +432,7 @@
   margin-top: 0;
 }
 
-.sake_profile_title, .sake_basicspec_title, .sake_category_title, .flavor_information_title, .sake_award_information_title {
+.sake_profile_title, .sake_basicspec_title, .sake_category_title, .flavor_information_title, .sake_award_information_title, .users_flavor_title, .users_chart_title {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -443,11 +443,17 @@
   border-bottom: 1px solid #e6e6e6;
 }
 
-.sake_profile_title div, .sake_basicspec_title div, .sake_category_title div, .flavor_information_title div, .sake_award_information_title div {
+.sake_profile_title div, .sake_basicspec_title div, .sake_category_title div, .flavor_information_title div, .sake_award_information_title div, .users_flavor_title div, .users_chart_title div {
   background: #d2d2d2;
   width: 4px;
   height: 20px;
   margin-right: 16px;
+}
+
+.flavor_information_title span {
+  color: #b2b2b2;
+  font-size: 8px;
+  margin-left: 8px;
 }
 
 /*basicspec*******************/
@@ -666,10 +672,12 @@
 
 .nonda_user_image_container {
   overflow: hidden;
-  width: 32px;
   min-width: 32px;
+  max-width: 32px;
   height: 32px;
   margin-right: 8px;
+  border-radius: 16px;
+  border: 1px solid #d2d2d2;
 }
 
 .nonda_user_image_container img {
@@ -693,14 +701,14 @@
   font-size: 13px;
   font-weight: bold;
   line-height: 140%;
+  word-break: break-all;
 }
 
 .nonda_user_profile_date_container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
   color: #8c8c8c;
   font-size: 12px;
   line-height: 140%;
@@ -780,27 +788,19 @@
 
 /*nonda_photo*******************/
 .review_container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  display: grid;
+  grid-auto-rows: 64px;
+  grid-template-columns: repeat(auto-fill, minmax(64px, 1fr));
+  grid-gap: 2px;
   width: 100%;
-  height: auto;
+  padding-top: 8px;
   margin-top: 8px;
   border-top: 1px dotted #d2d2d2;
 }
 
 .review_image {
   overflow: hidden;
-  width: 60px;
-  height: 60px;
   border: 1px solid #d2d2d2;
-  margin-top: 8px;
-  margin-right: 8px;
-}
-
-.review_image:last-child {
-  margin-right: 0;
 }
 
 .review_image img {
@@ -844,9 +844,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-}
-
-.tastes_item:first-child .tastes_title {
   font-size: 8px;
 }
 
@@ -945,83 +942,82 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  color: #000000;
+  color: #3f3f3f;
   font-size: 13px;
   width: 100%;
 }
 
-/*sort*******************/
-.tastingnote_sort {
+.users_flavor_wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
 }
 
-#tastingnote_sort_all, #tastingnote_sort_user {
+.tastingnote_sort {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  font-size: 16px;
-  width: 120px;
-  height: 32px;
-  margin: 0 16px;
-  border-radius: 16px;
-  flex-grow: 1;
+  width: 100%;
+  margin-top: 16px;
+}
+
+#tastingnote_sort_all, #tastingnote_sort_user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #3f3f3f;
+  font-size: 13px;
+  padding: 4px;
   cursor: pointer;
 }
 
-#tastingnote_sort_all {
+#tastingnote_sort_all span, #tastingnote_sort_user span {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  margin-right: 4px;
+}
+
+#tastingnote_sort_all span {
+  background: rgba(160,200,70, 0.2);
   border: 2px solid #A0C846;
 }
 
-#tastingnote_sort_user {
-  color: #8c8c8c;
+#tastingnote_sort_user span {
+  background: rgba(210,210,210, 0.2);
   border: 2px solid #d2d2d2;
 }
 
+.boxDisplay {
+  display: block;
+}
+
+.boxNone {
+  display: none;
+}
+
 /*tasting_box_flavor*******************/
-#tastingnote_graph_user, #tastingnote_graph_all {
+#tastingnote_graph_all, #tastingnote_graph_user {
   /*flexがあるとグラフ切り替えできない*/
   width: 100%;
-}
-
-.tastingnote_tasting_box_flavor {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 100%;
-  margin-top: 24px;
-}
-
-.tastingnote_tasting_flavor_title_container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  min-width: 80px;
-  max-width: 80px;
-  height: 40px;
-}
-
-.tastingnote_tasting_title {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
 }
 
 .tastingnote_flavor_container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin-left: 4px;
-  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 8px;
 }
 
 #tastingnote_flavor_content {
   display: flex;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: center;
   width: 100%;
 }
 
@@ -1046,165 +1042,46 @@
 }
 
 #tastingnote_flavor_content svg {
-  width: 40px;
-  height: 40px;
+  min-width: 40px;
+  max-width: 40px;
+  min-height: 40px;
+  max-height: 40px;
 }
 
 .tastingnote_flavor_caption {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   height: 40px;
-  margin-left: 4px;
+  margin-left: 8px;
   flex-grow: 1;
 }
 
-.tastingnote_flavor_ratio {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 56px;
-  max-width: 56px;
-  height: 40px;
-  margin-left: 8px;
+.tastingnote_flavor_caption h6 {
+  color: #000000;
+  font-size: 12px;
+  line-height: 140%;
 }
 
-.tastingnote_flavor_ratio span {
-  font-size: 15px;
-  font-weight: bold;
+.tastingnote_flavor_caption span {
+  color: #b2b2b2;
 }
 
-/*aroma~yoin*******************/
-.tastingnote_tasting_box {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 100%;
-  margin-top: 8px;
-}
-
-.tastingnote_tasting_title_container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  min-width: 80px;
-  max-width: 80px;
-  height: 25px;
-}
-
-.tastingnote_tasting_bar_container {
+.users_chart_wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 100%;
-  margin-left: 4px;
-  flex-grow: 1;
-}
-
-.tastingnote_input_range_container{
-  display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  height: 25px;
+  margin-top: 24px;
 }
 
-.everyone_input_range, .user_input_range {
-  width: 100%;
-}
-
-.everyone_input_range[type="range"], .user_input_range[type="range"] {
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: #e6e6e6;
-  width: 100%;
-  height: 2px;
-  border-radius: 1px;
-}
-.everyone_input_range[type="range"]:focus, .everyone_input_range[type="range"]:active, .user_input_range[type="range"]:focus, .user_input_range[type="range"]:active {
-  outline: none;
-}
-
-.everyone_input_range[type="range"]::-webkit-slider-thumb, .user_input_range[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
+.users_chart_container {
   position: relative;
-  width: 22px;
-  height: 22px;
-  display: block;
-  border: 2px solid #A0C846;
-  background-color: #ffffff;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-}
-
-.user_input_range[type="range"]::-webkit-slider-thumb {
-  border: 2px solid #009696;
-}
-
-.boxDisplay {
-  display: block;
-}
-
-.boxNone {
-  display: none;
-}
-
-.tastingnote_tasting_caption {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  color: #8c8c8c;
-  font-size: 11px;
-  width: 100%;
-  margin-top: 4px;
-}
-
-.tastingnote_tasting_score {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 56px;
-  max-width: 56px;
-  height: 25px;
-  margin-left: 8px;
-}
-
-.tastingnote_tasting_score span {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-/*tastingnote_tasting_icon*******************/
-.tastingnote_icon_adjust {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 30px;
-  height: 25px;
-  margin-right: 4px;
-}
-
-.tastingnote_flavor3630 {
-  fill: #b2b2b2;
-  width: 30px;
-  height: 25px;
-}
-
-.tastingnote_aroma2430, .tastingnote_body2430, .tastingnote_bitter2430 {
-  fill: #b2b2b2;
-  width: 20px;
-  height: 25px;
-  margin-right: 4px;
-}
-
-.tastingnote_clear3030, .tastingnote_sweetness3030, .tastingnote_umami3030, .tastingnote_acidity3030, .tastingnote_yoin3030 {
-  fill: #b2b2b2;
-  width: 25px;
-  height: 25px;
-  margin-right: 4px;
+  width:  100%;
+  height: 360px;
+  margin-top: 16px;
 }
 
 /*tastingnote_caption*******************/
@@ -1363,37 +1240,28 @@
 
 /*photoframe*******************/
 #photoframe {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  display: grid;
+  grid-auto-rows: 136px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2px;
   width: 100%;
-  height: auto;
-	border: 1px solid #00ff00;
 }
 
 .sake_photo {
+  overflow: hidden;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
-  position: relative;
-  width: 33.333%;
-  height: auto;
-  padding: 2px;
-}
-
-.sake_photo_image_container {
+  align-items: flex-start;
   width: 100%;
-  height: 120px;
-  border: 1px solid #d2d2d2;
+  height: 100%;
 }
 
 .sake_photo img {
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 116px;
+  border: 1px solid #d2d2d2;
   cursor: pointer;
 }
 
@@ -1405,7 +1273,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   width: 100%;
-  height: auto;
+  height: 20px;
 }
 
 /*edit_sake*******************/
@@ -1487,8 +1355,8 @@
   align-items: center;
   color: #000000;
   font-size: 18px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin-top: 24px;
+  margin-bottom: 16px;
 }
 
 .detail2430 {
@@ -1710,41 +1578,20 @@
 
 /****************************************/
 @media only screen and (min-width: 340px) {
-  .tastes_item:first-child .tastes_title {
+  .tastes_title {
     font-size: 11px;
   }
 }
 
 @media only screen and (min-width: 370px) {
-  .tastes_item:first-child .tastes_title {
+  .tastes_title {
     font-size: 13px;
-  }
-}
-
-@media only screen and (min-width: 410px) {
-  .nonda_user_profile_date_container {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
   }
 }
 
 @media only screen and (min-width: 560px) {
   #sakeheader #sake_name {
     font-size: 18px;
-  }
-
-  .nonda_date {
-    margin-left: 20px;
-  }
-
-  .sake_photo {
-    width: 25%;
-    padding: 5px;
-  }
-
-  .sake_photo_image_container {
-    height: 200px;
   }
 
   .tastes_item {
@@ -1759,6 +1606,15 @@
 
   .tastes_item:last-child {
     border-right: none;
+  }
+
+  #photoframe {
+    grid-auto-rows: 224px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .sake_photo img {
+    height: 204px;
   }
 }
 
@@ -1792,7 +1648,10 @@
 
   .tastingnote_tab_panel {
     flex-direction: row;
-    width: 100%;
+  }
+
+  .users_chart_container {
+    height: 400px;
   }
 
   .tastingnote_caption {
@@ -1800,6 +1659,10 @@
     max-width: 320px;
     margin-top: 0;
     margin-left: 50px;
+  }
+
+  .tastingnote_caption_invisible {
+    display: block;
   }
 }
 
@@ -1837,6 +1700,7 @@
   }
 
   #banner_frame {
+    display: flex;
     width: 300px;
   }
 
