--- a/css/user_view_config.css
+++ b/css/user_view_config.css
@@ -1,129 +1,93 @@
-#config_banner_container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	width: 1200px;
-	max-width: 96%;
-	height: auto;
-}
-
-#config_container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-  overflow: hidden;
-	width: 1200px;
-	max-width: 100%;
-	height: auto;
-	margin-top: 10px;
-}
-
-#banner_container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	overflow: hidden;
-	width: 1200px;
-	max-width: 100%;
-	height: auto;
-	margin-top: 15px;
-	display: none;
-}
-
-/************************************************************/
 #user_information {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-	color: #3f3f3f;
-	width: 1200px;
-	max-width: 96%;
-	height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: #3f3f3f;
+  width: 1200px;
+  max-width: 96%;
+  height: auto;
 }
 
 .user_image_name_container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: flex-start;
-	width: 100%;
-	height: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  height: auto;
 }
 
 .user_image_container {
-	overflow: hidden;
-  min-width: 40px;
-  max-width: 40px;
-  height: 40px;
+  overflow: hidden;
+  min-width: 64px;
+  max-width: 64px;
+  height: 64px;
   margin-right: 8px;
-  border: 1px solid #d2d2d2;
+  border-radius: 32px;
+  border: 2px solid #d2d2d2;
 }
 
 .user_image_container img {
-	object-fit: cover;
-	width: 100%;
-	height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #profile_name {
-  color: #3f3f3f;
-  font-size: 16px;
+  color: #000000;
+  font-size: 18px;
   font-weight: bold;
   line-height: 140%;
+  word-break: break-all;
   margin-right: 8px;
 }
 
 /************************************************************/
+#config_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 1200px;
+  max-width: 96%;
+  height: auto;
+  margin-top: 16px;
+}
+
 .mypage_config_title {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #3f3f3f;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: bold;
   width: 100%;
 }
 
 .config_title_config1616 {
   fill: #b2b2b2;
-  width: 25px;
-  height: 25px;
-  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
 
 /************************************************************/
 #config_content {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
-  margin-top: 10px;
+  margin-top: 16px;
 }
 
 #config_sub_title {
   display: flex;
-	flex-wrap: nowrap;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
+  justify-content: flex-start;
+  align-items: center;
   background: #e6e6e6;
   width: 100%;
   padding: 12px 8px;
-  border-radius: 4px 4px 0 0;
-  border: 1px solid #d2d2d2;
 }
 
 #config_sub_title p {
@@ -138,21 +102,16 @@
 
 .config_item {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   width: 100%;
   height: auto;
-  border-left: 1px solid #d2d2d2;
-  border-right: 1px solid #d2d2d2;
   border-bottom: 1px solid #d2d2d2;
 }
 
 .config_input_trigger {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #3f3f3f;
@@ -188,13 +147,4 @@
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
-}
-
-/************************************************************/
-@media only screen and (min-width: 1260px) {
-	#config_banner_container {
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: flex-start;
-	}
 }
