--- a/css/user_view_config_profile.css
+++ b/css/user_view_config_profile.css
@@ -1,82 +1,60 @@
 #user_information {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-	color: #3f3f3f;
-	width: 1200px;
-	max-width: 96%;
-	height: auto;
-}
-
-#main_sub_container {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	width: 1200px;
-	max-width: 96%;
-	height: auto;
-}
-
-#main_container {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-  overflow: hidden;
-	width: 1200px;
-	max-width: 100%;
-	height: auto;
-	margin-top: 10px;
-}
-
-#sub_container {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	overflow: hidden;
-	width: 1200px;
-	max-width: 100%;
-	height: auto;
-	margin-top: 15px;
-	display: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: #3f3f3f;
+  width: 1200px;
+  max-width: 96%;
+  height: auto;
 }
 
 /************************************************************/
 .user_image_name_container {
-	display: flex;
-	justify-content: flex-start;
-	align-items: flex-start;
-	width: 100%;
-	height: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  height: auto;
 }
 
 .user_image_container {
-	overflow: hidden;
-  min-width: 40px;
-  max-width: 40px;
-  height: 40px;
+  overflow: hidden;
+  min-width: 64px;
+  max-width: 64px;
+  height: 64px;
   margin-right: 8px;
-  border: 1px solid #d2d2d2;
+  border-radius: 32px;
+  border: 2px solid #d2d2d2;
 }
 
 .user_image_container img {
-	object-fit: cover;
-	width: 100%;
-	height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #profile_name {
-  color: #3f3f3f;
-  font-size: 16px;
+  color: #000000;
+  font-size: 18px;
   font-weight: bold;
   line-height: 140%;
+  word-break: break-all;
   margin-right: 8px;
 }
 
 /************************************************************/
+#main_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 1200px;
+  max-width: 96%;
+  height: auto;
+  margin-top: 16px;
+}
+
 .mypage_config_title_button_container {
   display: flex;
   justify-content: space-between;
@@ -98,7 +76,7 @@
   fill: #b2b2b2;
   width: 20px;
   height: 20px;
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 .mypage_config_button {
@@ -109,7 +87,7 @@
   font-size: 14px;
   text-decoration: none;
   padding: 2px 0;
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 .mypage_config_button span {
@@ -117,7 +95,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 126px;
+  width: 120px;
 }
 
 .mypage_config_button span:after {
@@ -147,10 +125,9 @@
   color: #3f3f3f;
   font-size: 14px;
   width: 100%;
-  margin-top: 10px;
+  margin-top: 16px;
   border-radius: 4px;
   border: 1px solid #d2d2d2;
-  overflow: hidden;
 }
 
 .config_item {
@@ -273,11 +250,20 @@
 }
 
 /************************************************************/
-.user_name_container, .user_birthday_container, .user_age_container, .user_sex_container, .user_address_container, .user_introduction_container {
+.user_name_container, .user_birthday_container, .user_sex_container, .user_age_container, .user_address_container, .user_introduction_container {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.user_certification_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   width: 100%;
   margin-top: 10px;
 }
@@ -350,15 +336,6 @@
 }
 
 /************************************************************/
-.user_certification_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  width: 100%;
-  margin-top: 10px;
-}
-
 .user_certification_select_item label {
   display: flex;
   justify-content: flex-start;
@@ -438,12 +415,4 @@
     margin-top: 0;
     margin-left: 20px;
   }
-}
-
-@media only screen and (min-width: 1260px) {
-	#main_sub_container {
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: flex-start;
-	}
 }
