--- a/css/user_view_config_withdraw.css
+++ b/css/user_view_config_withdraw.css
@@ -1,92 +1,62 @@
 #user_information {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-	color: #3f3f3f;
-	width: 1200px;
-	max-width: 96%;
-	height: auto;
-}
-
-#main_sub_container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	width: 1200px;
-	max-width: 96%;
-	height: auto;
-}
-
-#main_container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-  overflow: hidden;
-	width: 1200px;
-	max-width: 100%;
-	height: auto;
-	margin-top: 10px;
-}
-
-#sub_container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	overflow: hidden;
-	width: 1200px;
-	max-width: 100%;
-	height: auto;
-	margin-top: 15px;
-	display: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: #3f3f3f;
+  width: 1200px;
+  max-width: 96%;
+  height: auto;
 }
 
 /************************************************************/
 .user_image_name_container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: flex-start;
-	width: 100%;
-	height: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  height: auto;
 }
 
 .user_image_container {
-	overflow: hidden;
-  min-width: 40px;
-  max-width: 40px;
-  height: 40px;
+  overflow: hidden;
+  min-width: 64px;
+  max-width: 64px;
+  height: 64px;
   margin-right: 8px;
-  border: 1px solid #d2d2d2;
+  border-radius: 32px;
+  border: 2px solid #d2d2d2;
 }
 
 .user_image_container img {
-	object-fit: cover;
-	width: 100%;
-	height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #profile_name {
-  color: #3f3f3f;
-  font-size: 16px;
+  color: #000000;
+  font-size: 18px;
   font-weight: bold;
   line-height: 140%;
+  word-break: break-all;
   margin-right: 8px;
 }
 
 /************************************************************/
+#main_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 1200px;
+  max-width: 96%;
+  height: auto;
+  margin-top: 16px;
+}
+
 .mypage_config_title_button_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -94,8 +64,6 @@
 
 .mypage_config_title {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #3f3f3f;
@@ -113,25 +81,21 @@
 
 .mypage_config_button {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   color: #3f3f3f;
   font-size: 14px;
   text-decoration: none;
   padding: 2px 0;
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 .mypage_config_button span {
   position: relative;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  width: 126px;
+  width: 120px;
 }
 
 .mypage_config_button span:after {
@@ -154,7 +118,6 @@
 /************************************************************/
 #config_content {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -162,15 +125,13 @@
   color: #3f3f3f;
   font-size: 14px;
   width: 100%;
-  margin-top: 10px;
+  margin-top: 16px;
   border-radius: 4px;
   border: 1px solid #d2d2d2;
-  overflow: hidden;
 }
 
 .config_item {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -185,8 +146,6 @@
 
 .config_item_title {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -197,7 +156,6 @@
 /************************************************************/
 .user_withdraw_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -216,7 +174,6 @@
 
 .user_withdraw_text_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -226,8 +183,6 @@
 .user_withdraw_text {
   position: relative;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #3f3f3f;
@@ -274,18 +229,9 @@
   transform: rotate(45deg);
 }
 
-.user_withdraw_subtext {
-  color: #666666;
-  font-size: 13px;
-  margin-top: 10px;
-  margin-left: 8px;
-}
-
 /************************************************************/
 .user_config_button_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -323,12 +269,4 @@
   .config_item {
     padding: 20px;
   }
-}
-
-@media only screen and (min-width: 1260px) {
-	#main_sub_container {
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: flex-start;
-	}
 }
