--- a/css/user_login_form.css
+++ b/css/user_login_form.css
@@ -1,9 +1,5 @@
 body {
-  background-image:url("../images/icons/background_ochoko.png");
-  background-size: cover;
-  background-position: center right;
-  width: 100vw;
-  height: 100vh;
+  background: #f5f5f5;
 }
 
 #registry_user_container {
@@ -12,11 +8,10 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  color: #ffffff;
+  color: #000000;
   font-size: 14px;
   width: 86%;
   max-width: 400px;
-  padding: 16px;
 }
 
 /************************************************************/
@@ -28,10 +23,10 @@ body {
   align-items: center;
   font-size: 20px;
   font-weight: bold;
-  text-shadow: 1px 1px 0px #000000;
+  text-shadow: 1px 1px 0px #b2b2b2;
   width: 100%;
   padding: 8px;
-  margin-top: 20px;
+  margin-top: 16px;
 }
 
 #registry_user_form {
@@ -44,8 +39,8 @@ body {
   width: 100%;
   height: auto;
   padding: 24px 0;
-  border-top: 1px solid #8c8c8c;
-  border-bottom: 1px solid #8c8c8c;
+  border-top: 1px solid #b2b2b2;
+  border-bottom: 1px solid #b2b2b2;
 }
 
 /************************************************************/
@@ -56,7 +51,7 @@ body {
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 16px;
 }
 
 .row_container:first-child {
@@ -74,7 +69,7 @@ body {
 
 .row_title {
   font-size: 16px;
-  text-shadow: 1px 1px 0px #000000;
+  text-shadow: 1px 1px 0px #b2b2b2;
   margin-left: 8px;
 }
 
@@ -115,13 +110,12 @@ body {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  color: #3f3f3f;
   font-size: 16px;
   width: 100%;
   height: 30px;
   padding: 0 8px;
   border-radius: 4px;
-  border: 1px solid #d2d2d2;
+  border: 1px solid #b2b2b2;
 }
 
 /************************************************************/
@@ -131,14 +125,13 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
-  margin-bottom: 20px;
+  margin-top: 24px;
+  margin-bottom: 16px;
 }
 
 #submit_button {
   background: #C5CE51;
-  color: #3f3f3f;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: bold;
   width: 240px;
   height: 40px;
@@ -149,7 +142,7 @@ body {
 
 .registry_user_link {
   text-decoration: none;
-  margin-top: 20px;
+  margin-top: 16px;
 }
 
 .registry_user_link span{
@@ -162,7 +155,7 @@ body {
   color: #FF7F00;
   font-size: 14px;
   font-weight: bold;
-  text-shadow: 1px 1px 0px #000000;
+  text-shadow: 1px 1px 0px #b2b2b2;
   width: 250px;
   height: 20px;
   padding: 2px 12px;
